--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -6,11 +6,14 @@ $color-white: #ffffff;
 $color-green: #00ad92;
 $color-red: #ca0419;
 $color-teal: #009dad;
+$color-darkteal: #01666b;
 
 /* fill colors */
 $fill-white: #ffffff;
 $fill-orange: #ff6d40;
 $fill-red: #ca0419;
+$fill-teal: #009dad;
+$fill-darkteal: #01666b;
 $fill-lightyellow: #ffffaf;
 $fill-lightgray: #f4f4f4;
 $fill-darkgray: #dcdcdc;
@@ -20,6 +23,7 @@ $fill-darkgreen: #008874;
 
 /* dimensions */
 $width-column: 12%;
+$size-font-xxlarge: 75px;
 $size-font-xlarge: 40px;
 $size-font-large: 28px;
 $size-font-default: 20px;
@@ -51,7 +55,7 @@ h4,
 h5,
 h6 {
   color: $color-teal;
-  border-left: 4px solid #01666b;
+  border-left: 4px solid $color-darkteal;
   margin-left: -20px;
   padding-left: 20px;
   font-family: 'museo-slab', sans-serif;
@@ -102,7 +106,6 @@ button.large {
   font-size: $size-font-default;
   padding: 12px 35px;
 }
-.Home__Header__Newsletter button,
 .Button.transparent,
 button.transparent {
   background-color: transparent;
@@ -120,10 +123,6 @@ input[type='email'] {
 /* layout */
 * {
   box-sizing: border-box;
-}
-
-section {
-  padding: 25px 0;
 }
 
 .col {
@@ -176,77 +175,51 @@ section {
   zoom: 1;
 }
 
-ul.navigation {
-  font-size: $size-font-medium;
-  margin: 0;
-  padding: 25px 0;
-  list-style: none;
-  text-align: center;
-}
-.navigation li {
-  display: inline-block;
-  padding: 0 25px;
-}
-.navigation li a {
-  border-bottom: 2px solid transparent;
-  display: inline-block;
-  height: 62px;
-  margin-bottom: -36px;
-}
-.navigation li a.active {
-  border-color: $color-teal;
-  color: $color-darkgray;
-}
-
 .Link {
   color: $color-red;
   text-transform: uppercase;
 }
 
 /* -- Home -- */
-.Home__Header {
-  background: url(../dist/img/SaltLakeCity.png) no-repeat;
-  background-size: cover;
-}
 .Home__Header__Wrapper {
-  background-color: rgba($fill-lightgreen, 0.95);
+  /*background-color: rgba($fill-teal, 0.95);*/
   color: $color-white;
-  text-align: center;
-  padding: 50px 20% 0;
-  position: relative;
-  min-height: 500px;
-  overflow: hidden;
+  padding: 50px;
+  padding-bottom: 100px;
+  display: grid;
+  grid-template-columns: 100px auto;
+}
+.Home__Header__Wrapper h1,
+.Home__Header__Wrapper h2 {
+  color: $color-white;
+  padding-left: 0;
 }
 .Home__Header__Wrapper h1 {
-  color: $color-white;
+  font-size: $size-font-xxlarge;
+}
+.Home__Header__Wrapper h2 {
   font-size: $size-font-xlarge;
 }
+.Home__Header__Wrapper .Button,
+.Home__Header__Wrapper button {
+  background-color: $fill-white;
+  color: $color-teal;
+}
+.Home__Header__Wrapper .Button.primary,
+.Home__Header__Wrapper button.primary {
+  background-color: $fill-darkteal;
+  color: $color-white;
+}
 .Home__Header__Content {
-  position: relative;
-  top: 75px;
+  border-left: 4px solid #01666b;
+  padding-left: 25px;
+  margin-left: 25px;
+  width: 850px;
   z-index: 100;
 }
-.Home__Header__Nav.navigation {
-  font-size: $size-font-medium;
-  margin-top: 71px;
-}
-.Home__Header__Nav a {
-  color: $color-white;
-}
-.Home__Header__Newsletter {
-  background-color: $fill-darkgreen;
-  color: $color-white;
-  font-size: $size-font-medium;
-  text-align: center;
-  padding: 15px 0;
-  z-index: 100;
-}
-.Home__Header__ReactLogo {
-  opacity: 0.1;
-  position: absolute;
-  right: 100px;
-  bottom: -175px;
-  z-index: 0;
+.Home__Header__Content h1,
+.Home__Header__Content h2 {
+  border: 0 none;
 }
 .Home__Header .Button {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -411,14 +384,73 @@ ul.navigation {
   padding: 50px;
   max-width: 1200px;
 }
+.Content section {
+  padding: 25px 0;
+}
 
 /* -- Header -- */
-.Header--padded {
-  border-bottom: 1px solid $fill-darkgray;
-  padding: 10px 0;
+.Header {
+  background-color: $fill-teal;
+}
+.Header__Home {
+  background: url(../dist/img/TimpanogosHeader.png) no-repeat center -100px fixed;
+  background-size: cover;
+}
+.Header__Home .Header__Nav ul {
+  margin-left: 0;
+}
+.Header__Home .Header__Nav section:first-of-type img {
+  display: none;
 }
 .Header__Nav {
+  /*background-color: rgba($fill-teal, 0.95);*/
+  display: grid;
+  grid-template-columns: 800px auto;
+  padding: 25px;
+}
+.Header__Nav section:last-of-type {
+  text-align: right;
+}
+.Header__Nav section:first-of-type img {
+  position: absolute;
+}
+.Header__Nav ul {
+  margin: 0;
+  margin-left: 50px;
+  padding: 0;
   display: inline-block;
+  font-size: $size-font-medium;
+  line-height: 44px;
+  list-style: none;
+}
+.Header__Nav li {
+  display: inline-block;
+  padding: 0 25px;
+}
+.Header__Nav li a {
+  border-bottom: 4px solid transparent;
+  display: inline-block;
+}
+.Header__Nav li a.active {
+  border-color: $color-white;
+  font-weight: bold;
+}
+
+.Header__Nav section:last-of-type .Button {
+  margin-left: 25px;
+}
+.Header__Nav a,
+.Header__Nav a:hover,
+.Header__Nav .Icon:hover,
+.Header__Nav .Icon {
+  color: $color-white;
+}
+.Header__Nav a.Button {
+  color: $color-teal;
+}
+.Header__Nav .Icon {
+  line-height: 44px;
+  vertical-align: middle;
 }
 .Header__Logo {
   padding-left: 50px;
