--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,26 +1,20 @@
 /* font colors */
 $color-primary: #232323;
-$color-lightestgray: #919191;
-$color-lightgray: #777777;
-$color-darkgray: #444444;
 $color-white: #ffffff;
-$color-green: #00ad92;
-$color-red: #ca0419;
-$color-teal: #009dad;
-$color-darkteal: #01666b;
+$color-grayLightest: #f4f4f4;
+$color-grayLight: #dcdcdc;
+$color-gray: #999999;
+$color-grayDark: #777777;
+$color-grayDarkest: #444444;
+$color-red: #e0000a;
+$color-redDark: #c20000;
+$color-tealLight: #008997;
+$color-teal: #006164;
+$color-tealDark: #005659;
 
-/* fill colors */
-$fill-white: #ffffff;
-$fill-orange: #ff6d40;
-$fill-red: #ca0419;
-$fill-teal: #009dad;
-$fill-darkteal: #01666b;
+/* legacy colors */
 $fill-lightyellow: #ffffaf;
-$fill-lightgray: #f4f4f4;
-$fill-darkgray: #dcdcdc;
-$fill-lightgreen: #00ad93;
 $fill-mediumgreen: #57b5ac;
-$fill-darkgreen: #008874;
 
 /* dimensions */
 $width-column: 12%;
@@ -34,7 +28,7 @@ $size-font-xsmall: 12px;
 
 /* typography */
 body {
-  background-color: $fill-white;
+  background-color: $color-white;
   color: $color-primary;
   font-family: lato, sans-serif;
   font-size: $size-font-default;
@@ -55,8 +49,8 @@ h3,
 h4,
 h5,
 h6 {
-  color: $color-teal;
-  border-left: 4px solid $color-darkteal;
+  color: $color-tealLight;
+  border-left: 4px solid $color-tealDark;
   margin-left: -20px;
   padding-left: 20px;
   font-family: 'museo-slab', sans-serif;
@@ -64,7 +58,7 @@ h6 {
 }
 
 section h1 {
-  color: $color-darkgray;
+  color: $color-grayDarkest;
   font-size: $size-font-xlarge;
   margin-bottom: 50px;
 }
@@ -81,26 +75,34 @@ input[type='email'] {
 
 .Button[disabled],
 button[disabled] {
-  background-color: $fill-lightgray;
-  border-color: $fill-darkgray;
-  color: $color-lightgray;
-  text-shadow: 1px 1px 0 $fill-white;
+  background-color: $color-grayLightest;
+  border-color: $color-grayLight;
+  color: $color-grayDark;
 }
 
 .Button,
 button {
   border: 0 none;
-  background-color: $fill-white;
+  background-color: $color-white;
   color: $color-red;
   cursor: pointer;
   display: inline-block;
   padding: 8px 25px;
   text-transform: uppercase;
 }
+.Button:hover,
+button:hover {
+  color: $color-redDark;
+  text-decoration: none;
+}
 .Button.primary,
 button.primary {
-  background-color: $fill-red;
+  background-color: $color-red;
   color: $color-white;
+}
+.Button.primary:hover,
+button.primary:hover {
+  background-color: $color-redDark;
 }
 .Button.large,
 button.large {
@@ -116,7 +118,7 @@ button.transparent {
 
 input[type='text'],
 input[type='email'] {
-  border: 1px solid $fill-white;
+  border: 1px solid $color-white;
   line-height: 1.6;
   width: 260px;
 }
@@ -176,12 +178,29 @@ input[type='email'] {
   zoom: 1;
 }
 
+.link-list {
+  list-style: none;
+}
+.link-list li {
+  border-left: 4px solid $color-red;
+  padding-left: 15px;
+  margin-bottom: 15px;
+  height: 8px;
+}
+.link-list li a {
+  position: relative;
+  top: -9px;
+}
+
 .Link {
   color: $color-red;
   text-transform: uppercase;
 }
 
 /* -- Home -- */
+.Home__About section.highlight {
+  margin-bottom: 25px;
+}
 .Home__Header__Wrapper {
   color: $color-white;
   padding: 50px;
@@ -202,13 +221,21 @@ input[type='email'] {
 }
 .Home__Header__Wrapper .Button,
 .Home__Header__Wrapper button {
-  background-color: $fill-white;
+  background-color: $color-white;
   color: $color-teal;
+}
+.Home__Header__Wrapper .Button:hover,
+.Home__Header__Wrapper button:hover {
+  color: $color-tealDark;
 }
 .Home__Header__Wrapper .Button.primary,
 .Home__Header__Wrapper button.primary {
-  background-color: $fill-darkteal;
+  background-color: $color-teal;
   color: $color-white;
+}
+.Home__Header__Wrapper .Button.primary:hover,
+.Home__Header__Wrapper button.primary:hover {
+  background-color: $color-tealDark;
 }
 .Home__Header__Content {
   border-left: 4px solid #01666b;
@@ -231,7 +258,7 @@ input[type='email'] {
   margin: 25px 0;
 }
 .Home__UpcomingDate--disabled {
-  color: $color-lightestgray;
+  color: $color-gray;
 }
 .Home__UpcomingDate--disabled time {
   text-decoration: line-through;
@@ -249,7 +276,7 @@ input[type='email'] {
 }
 
 .Home__TicketCard {
-  background-color: $fill-lightgray;
+  background-color: $color-grayLightest;
   padding: 25px;
   margin: 10px 0;
   display: grid;
@@ -270,15 +297,22 @@ input[type='email'] {
   text-decoration: line-through;
 }
 .Home__TicketCard__Order {
-  background-color: $fill-white;
+  background-color: $color-white;
   text-align: center;
   padding: 25px;
 }
 
-/* -- Sponsors -- */
-.Sponsors {
+/* -- Not Found -- */
+.NotFound {
   text-align: center;
 }
+.NotFound h1 {
+  border: 0 none;
+  padding: 0;
+  margin: 25px 0;
+}
+
+/* -- Sponsors -- */
 .Sponsors img {
   margin: 25px;
   vertical-align: middle;
@@ -286,14 +320,27 @@ input[type='email'] {
 
 /* -- Stream -- */
 .Stream {
-  text-align: center;
+  width: 560px;
+  margin: 0 auto;
 }
 .Stream__Embedded {
   border: 0;
 }
+.Stream__Caption {
+  display: grid;
+  grid-template-columns: 42px auto;
+  margin-top: 25px;
+}
 .Stream__Note {
-  color: $color-lightgray;
+  color: $color-grayDark;
   font-size: $size-font-xsmall;
+}
+.Stream h2 {
+  border: 0 none;
+  padding: 0;
+  margin: 0 0 0 15px;
+  line-height: 42px;
+  text-align: left;
 }
 
 /* -- Proposals -- */
@@ -306,45 +353,24 @@ input[type='email'] {
 }
 
 /* -- Venue -- */
-.Venue h1 {
-  text-align: center;
+.Venue__Details {
+  display: grid;
+  grid-template-columns: 500px auto;
 }
-.Venue__Wrapper {
-  background: url(../dist/img/SaltLakeCitySkyline.png) no-repeat;
-  background-size: cover;
-  margin: 0 -50px;
+.Venue__Details__Mapbox {
+  background-color: $color-grayLightest;
+  padding: 25px;
+  margin-right: 50px;
 }
-.Venue__Content {
-  background: rgba($fill-mediumgreen, 0.95);
-  color: $color-white;
-  padding: 50px;
+.Venue__Details__Mapbox .Button,
+.Venue__Details__Mapbox button {
+  box-shadow: 0 3px 5px $color-grayLight;
 }
-.Venue__Content h2 {
-  color: $color-white;
+.Venue__Details__Mapbox__Address {
+  margin: 20px 0;
 }
-.Venue__Content__Address {
-  color: rgba($color-white, 0.75);
-  font-size: $size-font-medium;
-  margin-bottom: 50px;
-}
-.Venue__Hotel,
-.Venue__Party {
-  padding-top: 50px;
-}
-.Venue__Hotel__Address,
-.Venue__Party__Address {
-  color: rgba($color-primary, 0.75);
-  font-size: $size-font-medium;
-  margin-bottom: 25px;
-}
-.Venue__Content button,
-.Venue__Hotel button {
-  margin-top: 25px;
-}
-
-.Venue__Content__Thumbnail img {
-  border-radius: 318px;
-  border: 5px solid white;
+.Venue__Details__Mapbox__Address strong {
+  display: block;
 }
 
 /* -- Schedule -- */
@@ -367,8 +393,8 @@ input[type='email'] {
 }
 
 .Schedule__Session {
-  background: $fill-white;
-  border-bottom: 1px solid $fill-darkgray;
+  background: $color-white;
+  border-bottom: 1px solid $color-grayLight;
   padding: 25px;
   position: relative;
   -webkit-transition: background-color 2s;
@@ -378,7 +404,7 @@ input[type='email'] {
   border-bottom: 0 none;
 }
 .Schedule__Session time {
-  color: $color-lightgray;
+  color: $color-grayDark;
   display: inline-block;
   vertical-align: top;
   width: 125px;
@@ -417,7 +443,7 @@ input[type='email'] {
   font-size: $size-font-medium;
 }
 .Schedule__Session__Description h3 {
-  color: $color-darkgray;
+  color: $color-grayDarkest;
 }
 .Schedule__Session__Description p {
   font-size: $size-font-small;
@@ -432,6 +458,13 @@ input[type='email'] {
 .Content section {
   padding: 25px;
 }
+.Content section.highlight {
+  background-color: $color-grayLightest;
+}
+.Content section.highlight .Button,
+.Content section.highlight button {
+  box-shadow: 0 3px 5px $color-grayLight;
+}
 .Content section > h2 {
   margin-left: -25px;
   margin-bottom: 50px;
@@ -439,7 +472,7 @@ input[type='email'] {
 
 /* -- Header -- */
 .Header {
-  background-color: $fill-teal;
+  background-color: $color-tealLight;
 }
 .Header__Home {
   background: url(../dist/img/TimpanogosHeader.png) no-repeat center -100px fixed;
@@ -479,6 +512,9 @@ input[type='email'] {
   border-bottom: 4px solid transparent;
   display: inline-block;
 }
+.Header__Nav li a:hover {
+  text-decoration: none;
+}
 .Header__Nav li a.active {
   border-color: $color-white;
   font-weight: bold;
@@ -507,8 +543,8 @@ input[type='email'] {
 /* -- Footer -- */
 
 .Footer {
-  color: $color-lightgray;
-  background-color: $fill-lightgray;
+  color: $color-grayDark;
+  background-color: $color-grayLightest;
   font-size: 0.7em;
   padding: 50px;
 }
@@ -519,7 +555,7 @@ input[type='email'] {
 }
 .Footer h2,
 .Footer h4 {
-  color: $color-darkgray;
+  color: $color-grayDarkest;
   border: 0 none;
   padding: 0;
 }
@@ -530,7 +566,7 @@ input[type='email'] {
   padding: 0 0 25px 0;
 }
 section.Footer__Tickets {
-  background-color: $fill-white;
+  background-color: $color-white;
   padding: 50px;
   text-align: center;
   display: inline-block;
@@ -558,7 +594,7 @@ section.Footer__Tickets h2 {
   font-size: $size-font-medium;
 }
 .Person em {
-  color: $color-lightgray;
+  color: $color-grayDark;
   display: inline-block;
   font-size: $size-font-small;
   height: 45px;
@@ -573,34 +609,9 @@ section.Footer__Tickets h2 {
   visibility: visible;
 }
 
-/* -- Legend -- */
-.Legend {
-  color: $color-teal;
-  font-family: 'museo-slab', sans-serif;
-  font-size: $size-font-medium;
-  margin: 50px 0 25px;
-  text-align: center;
-  position: relative;
-}
-.Legend > div:nth-of-type(1) {
-  border-bottom: 1px solid $fill-darkgray;
-  content: '';
-  position: absolute;
-  height: 1px;
-  top: 10px;
-  left: 0;
-  right: 0;
-}
-.Legend > div:nth-of-type(2) {
-  background-color: $fill-white;
-  display: inline-block;
-  padding: 0 35px;
-  position: relative;
-}
-
 /* -- Icon -- */
 .Icon {
-  color: $color-lightgray;
+  color: $color-grayDark;
   display: inline-block;
   font-size: 28px;
   width: 42px;
@@ -608,7 +619,7 @@ section.Footer__Tickets h2 {
   text-align: center;
 }
 .Icon:hover {
-  color: $color-darkgray;
+  color: $color-grayDarkest;
 }
 
 /* -- Newsletter -- */
@@ -622,7 +633,7 @@ section.Footer__Tickets h2 {
   margin-right: 20px;
 }
 .Newsletter button {
-  box-shadow: 0 3px 5px $fill-darkgray;
+  box-shadow: 0 3px 5px $color-grayLight;
 }
 
 /* -- Tickets -- */
@@ -639,6 +650,69 @@ section.Footer__Tickets h2 {
 .Countdown__Timer {
   color: $color-white;
   font-family: courier;
+}
+
+/* -- StyleGuide -- */
+.StyleGuide .Color {
+  display: inline-block;
+  margin: 5px 0;
+  padding: 10px;
+  width: 150px;
+  line-height: 50px;
+  text-align: center;
+  font-size: $size-font-small;
+}
+.StyleGuide .Color:first-of-type {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+.StyleGuide .Color:last-of-type {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.Color--white {
+  background-color: $color-white;
+  border: 1px solid $color-grayLightest;
+}
+.Color--primary {
+  background-color: $color-primary;
+  color: $color-grayLightest;
+}
+.Color--grayLightest {
+  background-color: $color-grayLightest;
+}
+.Color--grayLight {
+  background-color: $color-grayLight;
+}
+.Color--gray {
+  background-color: $color-gray;
+}
+.Color--grayDark {
+  background-color: $color-grayDark;
+}
+.Color--grayDarkest {
+  background-color: $color-grayDarkest;
+  color: $color-grayLight;
+}
+.Color--tealLight {
+  background-color: $color-tealLight;
+  color: $color-grayLight;
+}
+.Color--teal {
+  background-color: $color-teal;
+  color: $color-grayLight;
+}
+.Color--tealDark {
+  background-color: $color-tealDark;
+  color: $color-grayLight;
+}
+.Color--red {
+  background-color: $color-red;
+  color: $color-grayLight;
+}
+.Color--redDark {
+  background-color: $color-redDark;
+  color: $color-grayLight;
 }
 
 /* responsiveness */
