--- a/assets/css/responsive-800.scss
+++ b/assets/css/responsive-800.scss
@@ -193,6 +193,11 @@ input[type='email'] {
   }
 }
 
+.Stream__Embedded {
+  width: 350px;
+  height: 200px;
+}
+
 .Content .Home__TicketCard {
   display: block;
 
