Updating ticket countdown

--- a/assets/css/responsive-800.scss
+++ b/assets/css/responsive-800.scss
@@ -240,6 +240,10 @@ input[type='email'] {
   }
 }
 
+.Home__Header .Countdown {
+  margin-bottom: 25px;
+}
+
 .Content h2,
 .Content section > h2 {
   font-size: $size-font-medium;
