Better button sizes for mobile

--- a/assets/css/responsive-800.scss
+++ b/assets/css/responsive-800.scss
@@ -49,6 +49,8 @@ input[type='email'] {
   }
   .Home__Header__Buttons .Button {
     padding: 12px;
+    margin-top: 15px;
+    font-size: $size-font-medium;
   }
 
   .Header__Nav {
