--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -323,6 +323,9 @@ input[type='email'] {
   margin: 25px;
   vertical-align: middle;
 }
+.Sponsors__Logos {
+  text-align: center;
+}
 
 /* -- Stream -- */
 .Stream {
