--- a/assets/css/responsive-800.scss
+++ b/assets/css/responsive-800.scss
@@ -246,6 +246,10 @@ input[type='email'] {
   margin-bottom: 25px;
 }
 
+.Sponsors__Logos img {
+  max-width: 250px;
+}
+
 .Content h2,
 .Content section > h2 {
   font-size: $size-font-medium;
